# VenomScan

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_config.py  test_parsers.py
venomscan/: __init__.py  cli.py  config.py  severity.py
venomscan/reporting/: __init__.py  html_report.py  json_report.py
venomscan/reporting/templates/: report.html.j2
venomscan/scanners/: __init__.py  dns.py  http.py  nmap.py  tls.py
