[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "venomscan"
version = "0.1.0"
description = "Safe reconnaissance CLI prototype"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "VenomScan Contributors"}]
dependencies = [
  "typer==0.12.5",
  "rich==13.8.1",
  "jinja2==3.1.4",
  "dnspython==2.6.1"
]

[project.scripts]
venomscan = "venomscan.cli:app"

[tool.setuptools.packages.find]
include = ["venomscan*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]


[tool.ruff.lint.per-file-ignores]
"venomscan/scanners/tls.py" = ["UP017"]
"venomscan/severity.py" = ["UP017"]
"tests/test_parsers.py" = ["UP017"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
